@@ -97,6 +97,13 @@ You can also use our Glade logo to link from your home page to Glade.</font>
 </td></table>					
 
 <ul>
+<li><a href="http://www.progeny.com/prodserv/progenydebian/">Progeny Debian</a> -
+Progeny's commercial release of Debian makes extensive use of Glade.
+The installer and configuration system (a GNOME frontend to Debian's Debconf
+system) is built using Glade.
+</ul>
+
+<ul>
 <li><a href="http://www.terranet.kiev.ua/~ice/gxmp/">GxMP</a> - 
 an MP3 player.
 </ul>
@@ -569,8 +576,6 @@ address book application (in Italian, I think).
 proxy for surfing internet and draws a line at every minute user makes
 "click" in his browser.
 </ul>
-
-
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
