@@ -153,7 +153,7 @@ a short description and we'll add it to the
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
-Oct&nbsp;1&nbsp;2000
+Oct&nbsp;1&nbsp;2001
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td><font face="Arial,helvetica,geneva,sans-serif,lucida">
@@ -164,6 +164,22 @@ Oct&nbsp;1&nbsp;2000
 
 -->
 
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Apr&nbsp;27&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Progeny Debian uses Glade</B>
+<P>
+<a href="http://www.progeny.com/prodserv/progenydebian/">Progeny Debian</a> -
+Progeny's commercial release of Debian makes extensive use of Glade.
+The installer and configuration system (a GNOME frontend to Debian's Debconf
+system) is built using Glade.
+</font></td></tr>
 
 
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
